--- a/package.json
+++ b/package.json
@@ -1,111 +1,134 @@
 {
-	"name": "easyplant",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@commitlint/cz-commitlint": "^17.1.2",
-		"@heroicons/react": "^2.0.12",
-		"@hookform/resolvers": "^2.9.10",
-		"@reduxjs/toolkit": "^1.8.6",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.11.65",
-		"@types/react": "^18.0.21",
-		"@types/react-dom": "^18.0.6",
-		"axios": "^1.1.3",
-		"clsx": "^1.2.1",
-		"eslint": "^8.25.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.31.10",
-		"lint-staged": "^13.0.3",
-		"npm-run-all": "^4.1.5",
-		"postcss-cli": "^10.0.0",
-		"prettier": "^2.7.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "^4.6.0",
-		"react-redux": "^8.0.4",
-		"react-router-dom": "^6.4.2",
-		"react-scripts": "5.0.1",
-		"react-svg": "^15.1.10",
-		"redux": "^4.2.0",
-		"redux-persist": "^6.0.0",
-		"redux-thunk": "^2.4.1",
-		"typescript": "^4.8.4",
-		"web-vitals": "^2.1.4",
-		"yup": "^0.32.11"
-	},
-	"scripts": {
-		"build:css": "postcss src/styles/index.css -o src/styles/app.css",
-		"watch:css": "postcss src/styles/index.css -o src/styles/app.css --watch",
-		"react-scripts:start": "react-scripts start",
-		"react-scripts:dist": "react-scripts build",
-		"start": "run-p watch:css react-scripts:start",
-		"build": "run-s build:css react-scripts:dist",
-		"lint": "eslint .",
-		"lint:fix": "eslint --fix .",
-		"prettier": "prettier --write \"src/**/*.ts\"",
-		"prettier:check": "prettier --check \"src/**/*.ts\"",
-		"prepare": "husky install",
-		"lint-staged": "lint-staged",
-		"commit": "git-cz",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"config": {
-		"commitizen": {
-			"path": "@commitlint/cz-commitlint"
-		}
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"src/**/*.{js,jsx,ts,tsx}": [
-			"eslint --fix"
-		],
-		"src/**/*.{html,md,txt}": [
-			"prettier --write"
-		]
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		],
-		"overrides": [
-			{
-				"files": [
-					"**/*.stories.*"
-				],
-				"rules": {
-					"import/no-anonymous-default-export": "off"
-				}
-			}
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@types/redux-persist": "^4.3.1",
-		"autoprefixer": "^10.4.12",
-		"husky": "^8.0.1",
-		"postcss": "^8.4.18",
-		"tailwindcss": "^3.1.8"
-	}
+  "name": "easyplant",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@commitlint/cz-commitlint": "^17.1.2",
+    "@heroicons/react": "^2.0.12",
+    "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.65",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
+    "clsx": "^1.2.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^10.0.0",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
+    "react-svg": "^15.1.10",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "typescript": "^4.8.4",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
+  },
+  "scripts": {
+    "build:css": "postcss src/styles/index.css -o src/styles/app.css",
+    "watch:css": "postcss src/styles/index.css -o src/styles/app.css --watch",
+    "react-scripts:start": "react-scripts start",
+    "react-scripts:dist": "react-scripts build",
+    "start": "run-p watch:css react-scripts:start",
+    "build": "run-s build:css react-scripts:dist",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prettier": "prettier --write \"src/**/*.ts\"",
+    "prettier:check": "prettier --check \"src/**/*.ts\"",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged",
+    "commit": "git-cz",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "src/**/*.{html,md,txt}": [
+      "prettier --write"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      },
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/node-logger": "^6.5.13",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/redux-persist": "^4.3.1",
+    "autoprefixer": "^10.4.12",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "husky": "^8.0.1",
+    "postcss": "^8.4.18",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.1.8",
+    "webpack": "^5.75.0"
+  }
 }
