--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@commitlint/cz-commitlint": "^17.1.2",
     "@heroicons/react": "^2.0.12",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.6",
@@ -112,6 +111,7 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cz-commitlint": "^17.2.0",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
@@ -125,7 +125,9 @@
     "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.12",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "commitizen": "^4.2.5",
     "husky": "^8.0.1",
+    "inquirer": "^8.2.5",
     "postcss": "^8.4.18",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.1.8",
