--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
+    "flowbite": "^1.5.4",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.0.0",
@@ -33,6 +34,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "swiper": "^8.4.5",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
