--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.12",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.6",
